# dummy-project

./: CMakeLists.txt  main.cpp
hereos/: CMakeLists.txt  echo.cc  echo.h  grpc.cmake.inc  ingestion.cc  ingestion.h
protos/: echo.proto  ingestion.proto
